[package]
name = "bloks"
version = "0.1.0"
edition = "2024"
description = "Context blok generator — repo-first library knowledge for AI agents"
license = "MIT"

[[bin]]
name = "bloks"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
